--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             use cases evolve. With Amplify, you can configure a web or mobile app backend.
             connect your app in minutes, visually build a web frontend UI, and easily 
             manage app content outside the AWS console. Ship faster and scale effortlessly--
-            with no cloud expertise needed.</p
+            with no cloud expertise needed.</p>
+        <p>At first I created a Repository on my GitHub account, its name: aws-website,
+            then I create a file name is index.html.</p>
     </body>
 </html>
